# nautilus_acquisition

./: .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  LICENSE.txt  NSIS.template.in  README.md  conanfile.txt  requirements.txt  rois.patch
libs/: CMakeLists.txt
libs/aws-cpp-sdk-all/lib/: aws-c-auth.lib  aws-c-io.lib  aws-crt-cpp.lib
libs/aws-sdk/: CMakeLists.txt
libs/aws-sdk/lib/: aws-c-cal.lib  aws-c-mqtt.lib  aws-c-s3.lib  aws-checksums.lib  aws-cpp-sdk-core.lib  aws-cpp-sdk-s3.lib
libs/aws-sdk/lib/pkgconfig/: aws-cpp-sdk-core.pc  aws-cpp-sdk-s3.pc
libs/aws_sdk/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AWSSDK.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  uninstall.vcxproj  uninstall.vcxproj.filters
libs/aws_sdk/AWSSDK/: AWSSDKConfigVersion.cmake
libs/aws_sdk/crt/aws-crt-cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  aws-crt-cpp.sln  aws-crt-cpp.vcxproj  aws-crt-cpp.vcxproj.filters
libs/aws_sdk/src/aws-cpp-sdk-core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  aws-cpp-sdk-core-config-version.cmake  aws-cpp-sdk-core.pc  aws-cpp-sdk-core.sln  aws-cpp-sdk-core.vcxproj  aws-cpp-sdk-core.vcxproj.filters  ub_core.cpp
libs/aws_sdk/tests/aws-cpp-sdk-core-tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  aws-cpp-sdk-core-tests.sln  aws-cpp-sdk-core-tests.vcxproj  aws-cpp-sdk-core-tests.vcxproj.filters
libs/aws_sdk/tests/aws-cpp-sdk-s3-integration-tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  aws-cpp-sdk-s3-integration-tests.sln  aws-cpp-sdk-s3-integration-tests.vcxproj  aws-cpp-sdk-s3-integration-tests.vcxproj.filters
libs/aws_sdk/tests/testing-resources/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  testing-resources.pc  testing-resources.sln  testing-resources.vcxproj  testing-resources.vcxproj.filters
libs/build-R/: aws-sdk-cpp-config.cmake
libs/build-R/aws-sdk-cpp/AWSSDK/: AWSSDKConfigVersion.cmake
libs/daqmx/: CMakeLists.txt
libs/daqmx/include/: NIDAQmx.h
libs/dbgDAQmx/: CMakeLists.txt
libs/dbgDAQmx/src/: dbgdaqmx.cpp
libs/dbgcam/: CMakeLists.txt
libs/dbgcam/src/: dbgcam.cpp
libs/ffmpeg/: CMakeLists.txt
libs/ffmpeg/include/libavutil/: ffversion.h
libs/libtiff/: CMakeLists.txt
libs/libtiff/include/: tiffconf.h
libs/openh264/: CMakeLists.txt
libs/ordered-map/: CMakeLists.txt
libs/pvcam/: CMakeLists.txt
libs/pvcam/include/pvcam/: pvcam_helper_color.h
libs/sdk-build/crt/aws-crt-cpp/: libaws-crt-cpp.dylib
libs/sdk-build/lib/: libaws-c-event-stream.1.0.0.dylib
libs/sdk-build/src/aws-cpp-sdk-core/: ub_core.cpp
libs/sdk-build/tests/aws-cpp-sdk-s3-integration-tests/: aws-cpp-sdk-s3-integration-tests
libs/sdk-build/tests/testing-resources/: libtesting-resources.dylib  testing-resources.pc
libs/sdk_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AWSSDK.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aws-sdk-cpp-config.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
libs/sdk_build/AWSSDK/: AWSSDKConfigVersion.cmake
libs/sdk_build/crt/aws-crt-cpp/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  aws-crt-cpp.sln  aws-crt-cpp.vcxproj  aws-crt-cpp.vcxproj.filters  libaws-crt-cpp.dylib
libs/sdk_build/lib/: libaws-c-event-stream.1.0.0.dylib
libs/sdk_build/src/aws-cpp-sdk-core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  aws-cpp-sdk-core-config-version.cmake  aws-cpp-sdk-core.pc  aws-cpp-sdk-core.sln  aws-cpp-sdk-core.vcxproj  aws-cpp-sdk-core.vcxproj.filters  ub_core.cpp
libs/sdk_build/tests/aws-cpp-sdk-core-tests/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  aws-cpp-sdk-core-tests.sln  aws-cpp-sdk-core-tests.vcxproj  aws-cpp-sdk-core-tests.vcxproj.filters
libs/sdk_build/tests/aws-cpp-sdk-s3-integration-tests/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  aws-cpp-sdk-s3-integration-tests  aws-cpp-sdk-s3-integration-tests.sln  aws-cpp-sdk-s3-integration-tests.vcxproj  aws-cpp-sdk-s3-integration-tests.vcxproj.filters
libs/sdk_build/tests/testing-resources/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  libtesting-resources.dylib  testing-resources.sln  testing-resources.vcxproj  testing-resources.vcxproj.filters
libs/sqlite3/: CMakeLists.txt
libs/tango/: CMakeLists.txt
libs/tango/include/: Tango.h
libs/tango/src/: Tango.cpp
libs/zlib/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: advancedsetupdialog.cpp  advancedsetupdialog.h  advancedsetupdialog.ui  autoupdate.cpp  autoupdate.h  autoupdate.ui  banner.h  banner.h.in  config.cpp  config.h  histview.cpp  histview.h  liveview.cpp  liveview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plateidedit.cpp  plateidedit.h  settings.cpp  settings.h  settings.ui  splashscreen.ui  stagecontrol.cpp  stagecontrol.h  stagecontrol.ui
src/app/tango/: TangoStage.cpp
src/cameras/: CMakeLists.txt
src/cameras/include/: AcquisitionInterface.h  Allocator.h  CameraInterface.h  FrameInterface.h  ObjectPool.h
src/cameras/include/pm/: Acquisition.h  Camera.h  ColorConfig.h  Config.h  Frame.h  Settings.h
src/cameras/src/pm/: Acquisition.cpp  Camera.cpp  Frame.cpp
src/common/: CMakeLists.txt  main.cpp  test
src/common/include/: Allocator.h  Bitmap.h  BitmapFormat.h  Database.h  FFmpegFilter.h  FileWriter.h  FramePool.h  ObjectPool.h  PMemCopy.h  ParTask.h  PostProcess.h  RawFile.h  Rois.h  TaskApplyLut16.h  TaskFrameLut16.h  TaskFrameStats.h  ThreadPool.h  TiffFile.h  Timer.h  VideoEncoder.h  db.h
src/common/include/interfaces/: AcquisitionInterface.h  (+5 more)
src/common/src/: Bitmap.cpp  BitmapFormat.cpp  FFmpegFilter.cpp  PMemCopy.cpp  Rois.cpp  TiffFile.cpp
src/controllers/NI/: CMakeLists.txt
src/controllers/tango/: CMakeLists.txt
src/tile/: CMakeLists.txt
src/tile/src/: main.cpp
(+1356 files in other folders)
