add_subdirectory(dbgcam)
add_subdirectory(pvcam)
add_subdirectory(libtiff)
add_subdirectory(daqmx)
add_subdirectory(dbgDAQmx)
add_subdirectory(tango)
add_subdirectory(ffmpeg)
add_subdirectory(zlib)
add_subdirectory(ordered-map)
add_subdirectory(aws-sdk-cpp)
list(APPEND CMAKE_PREFIX_PATH "C:\\Program Files\\aws-cpp-sdk-all\\lib\\cmake")
find_package(AWSSDK REQUIRED COMPONENTS s3)

